<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forecast_weather.ForecastWeatherFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:cardCornerRadius="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/forecastLoadingAnimationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:visibility="gone"
                tools:visibility="gone"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:text="@string/placeholder_temp"
                android:textSize="32sp"
                style="@style/TextBold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/placeholder_desc"
                android:textSize="@dimen/text_size_13"
                android:gravity="top"
                style="@style/TextBold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/temp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date"
                android:textSize="@dimen/text_size_13"
                android:gravity="top"
                style="@style/TextBold"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/mainIcon"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="@dimen/margin_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/strip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/strip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/margin_8">

                <ImageView
                    android:id="@+id/stripWindIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/windValue"
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/placeholder_wind_speed"
                    android:textSize="@dimen/text_size_13"
                    app:layout_constraintEnd_toEndOf="@+id/stripWindIcon"
                    app:layout_constraintStart_toStartOf="@+id/stripWindIcon"
                    app:layout_constraintTop_toBottomOf="@+id/stripWindIcon" />

                <ImageView
                    android:id="@+id/stripHumidityIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:src="@drawable/humidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/windValue" />

                <TextView
                    android:id="@+id/humidityValue"
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/placeholder_humidity"
                    android:textSize="@dimen/text_size_13"
                    app:layout_constraintEnd_toEndOf="@+id/stripHumidityIcon"
                    app:layout_constraintStart_toStartOf="@+id/stripHumidityIcon"
                    app:layout_constraintTop_toBottomOf="@+id/stripHumidityIcon" />

                <ImageView
                    android:id="@+id/stripVisibilityIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:src="@drawable/visibility"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidityValue" />

                <TextView
                    android:id="@+id/visibilityValue"
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/placeholder_visibility"
                    android:textSize="@dimen/text_size_13"
                    app:layout_constraintEnd_toEndOf="@+id/stripVisibilityIcon"
                    app:layout_constraintStart_toStartOf="@+id/stripVisibilityIcon"
                    app:layout_constraintTop_toBottomOf="@+id/stripVisibilityIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/forecastTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/days_forecast"
        android:textSize="@dimen/text_size_22"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_8"
        style="@style/TextBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCard"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecastRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastTitle"
        tools:listitem="@layout/forecast_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>
