<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/current_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.current_weather.CurrentWeatherFragment">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/currentCard"
                android:layout_width="0dp"
                android:layout_height="212dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:backgroundTint="@color/primary"
                app:cardCornerRadius="@dimen/margin_16">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/currentCardAnimationView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_rawRes="@raw/weathericon"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/detailsLayout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/weatherIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayoutCompat"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/cardCityName"
                            style="@style/TextBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16"
                            android:text="@string/placeholder_city"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_size_22" />

                        <TextView
                            android:id="@+id/temp"
                            style="@style/TextBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16"
                            android:text="@string/placeholder_temp"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_size_56" />

                        <TextView
                            android:id="@+id/weatherDescription"
                            style="@style/TextBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_8"
                            android:text="@string/placeholder_desc"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_size_16" />

                        <TextView
                            android:id="@+id/date"
                            style="@style/TextBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_8"
                            android:text="@string/placeholder_date"
                            android:textAlignment="center" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentCard"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                style="@style/TextBold"/>

            <TextView
                android:id="@+id/forecast"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/days_forecast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentCard" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/forecastLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/today"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/forecastAnimationView"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:lottie_rawRes="@raw/weathericon"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecast_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/forecast_card"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chartContainer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/forecastLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginVertical="@dimen/margin_16">
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/chartAnimationView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:lottie_rawRes="@raw/weathericon"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginVertical="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@+id/chartContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="@dimen/margin_8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/cardAnimationView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:lottie_rawRes="@raw/weathericon"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/cardContainer">
                        <TextView
                            android:id="@+id/wind_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginStart="@dimen/margin_8"
                            style="@style/TextBold"
                            android:textSize="@dimen/text_size_18"
                            android:text="@string/wind"/>

                        <TextView
                            android:id="@+id/pressure_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/wind_title"
                            app:layout_constraintEnd_toStartOf="@+id/humidity_title"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/margin_8"
                            android:textAlignment="center"
                            style="@style/TextBold"
                            android:textSize="@dimen/text_size_18"
                            android:text="@string/pressure"/>

                        <TextView
                            android:id="@+id/humidity_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_8"
                            style="@style/TextBold"
                            android:textSize="@dimen/text_size_18"
                            android:text="@string/humidity"/>

                        <TextView
                            android:id="@+id/wind_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/wind_title"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginStart="@dimen/margin_8"
                            android:paddingBottom="@dimen/margin_8"
                            style="@style/TextBold"/>

                        <TextView
                            android:id="@+id/pressure_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@+id/pressure_title"
                            app:layout_constraintEnd_toEndOf="@+id/pressure_title"
                            app:layout_constraintTop_toBottomOf="@+id/pressure_title"
                            android:layout_marginTop="@dimen/margin_8"
                            android:paddingBottom="@dimen/margin_8"
                            android:textAlignment="center"
                            style="@style/TextBold"/>

                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/humidity_title"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_8"
                            android:paddingBottom="@dimen/margin_8"
                            style="@style/TextBold"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/secondary"
                android:layout_margin="@dimen/margin_16"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>






















